--- a/src/index.less
+++ b/src/index.less
@@ -1,4 +1,4 @@
-@import '~iview/src/styles/index.less';
+//@import '~iview/src/styles/index.less';
 
 @menu-dark-title: #001529;
 @menu-dark-active-bg: #000c17;
