--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -19,7 +19,7 @@
     overflow: hidden;
   }
   .main-content-con{
-    height: ~"calc(100% - 60px)";
+    //height: ~"calc(100% - 60px)";
     overflow: hidden;
   }
   .tag-nav-wrapper{
