--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -1,11 +1,12 @@
 .main{
   .logo-con{
     height: 64px;
-    padding: 10px;
+    //padding: 10px;
+	  line-height: 64px;
     img{
       height: 44px;
       width: auto;
-      display: block;
+      //display: block;
       margin: 0 auto;
     }
   }
