顶部导航条

--- a/src/components/main/components/user/user.less
+++ b/src/components/main/components/user/user.less
@@ -1,12 +1,13 @@
-.user{
-  &-avatar-dropdown{
-    cursor: pointer;
-    display: inline-block;
-    // height: 64px;
-    vertical-align: middle;
-    // line-height: 64px;
-    .ivu-badge-dot{
-      top: 16px;
-    }
-  }
+.user {
+	&-avatar-dropdown {
+		color: #FFFFFF;
+		cursor: pointer;
+		display: inline-block;
+		// height: 64px;
+		vertical-align: middle;
+		// line-height: 64px;
+		.ivu-badge-dot {
+			top: 16px;
+		}
+	}
 }
