--- a/src/index.less
+++ b/src/index.less
@@ -84,3 +84,6 @@
 //.ivu-menu-light.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu):after {
 //	width: 0;
 //}
+.flex {
+	display: flex;
+}
