删除部分多余文件/文件夹

--- a/src/components/main/components/user/user.less
+++ b/src/components/main/components/user/user.less
@@ -2,10 +2,8 @@
 	&-avatar-dropdown {
 		color: #FFFFFF;
 		cursor: pointer;
-		display: inline-block;
-		// height: 64px;
+		//display: inline-block;
 		vertical-align: middle;
-		// line-height: 64px;
 		.ivu-badge-dot {
 			top: 16px;
 		}
