左侧菜单展开背景色，选中背景色，右边框颜色的修改

--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -41,7 +41,7 @@
 	}
 
 	.left-sider {
-		border-right: 1px solid #C8CCCF;
+		border-right: 1px solid #d5d9dc;
 		.ivu-layout-sider-children {
 			overflow-y: scroll;
 			margin-right: -18px;
