--- a/src/index.less
+++ b/src/index.less
@@ -24,7 +24,7 @@
 //左侧菜单,先如此做
 .ivu-menu-light.ivu-menu-vertical {
 	.ivu-menu-opened {
-		background: #F9F9F9;
+		background: #f3f5f7;
 		.ivu-menu-submenu-title {
 			background: @layout-sider-background;
 		}
@@ -36,7 +36,7 @@
 	}
 	.ivu-menu-item-active {
 		&:not(.ivu-menu-submenu) {
-			background: #E8EAED;
+			background: #e2e4e8;
 			&:after {
 				width: 0;
 			}
